--- a/style.css
+++ b/style.css
@@ -5,49 +5,12 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
-}
-
-.aaa img {
-  width: 100%;
-}
-
-.aaa .more_inf {
-  font-family: fantasy, cursive;
-}
-
-@media (max-width:768px) {
-  .aaa { 
-    text-align: center;
-  }
-}
-
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1
-}
-
-.task-row-wrapper {
-  display: flex;
-}
-
 ul {
   margin: 0;
   padding: 0px;
 }
 
-li, 
+li,
 h3 {
   list-style: none;
 }
@@ -57,7 +20,39 @@ button {
   outline: none;
 }
 
-button {
+.todo-heading {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
+}
+
+.todo-heading__image {
+  width: 100%;
+}
+
+.todo-heading__link {
+  font-family: fantasy, cursive;
+}
+
+.todo-body {
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
+}
+
+.todo-add__wrapper {
+  display: flex;
+}
+
+.todo-input,
+.todo-label {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+}
+
+.todo-btn {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +62,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-   color: #3a3A3a;
+.todo-btn:hover {
+  color: #3a3a3a;
 }
 
-/* Heading */
-h3,
-label[for="new-task"] {
+.todo-body__title,
+.todo-add__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,35 +77,33 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.todo-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
+  border: 1px solid #ddd;
+  background: #fff;
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
 }
 
-input[type="text"]:focus {
+.todo-input:focus {
   color: #333;
 }
 
-/* New Task */
-label[for="new-task"] {
+.todo-add__label {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.todo-add__input {
   width: 318px;
 }
 
-/* Task list */
-li {
+.todo-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -120,50 +112,58 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+
+.todo-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.todo-item__check {
   margin: 0 10px;
 }
 
-li > label {
+.todo-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
-  width: 226px
+.todo-item__input {
+  width: 226px;
 }
 
-button.delete img {
+.todo-btn--delete .todo-btn__image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+
+.todo-btn--delete .todo-btn__image:hover {
   transform: rotateZ(0);
 }
 
-/* Completed */
-ul#completed-tasks label {
+.todo-list--completed .todo-label {
   text-decoration: line-through;
   color: #888;
 }
 
-/* Edit Task */
-ul li input[type="text"] {
-  display: none
+.todo-item__input {
+  display: none;
 }
 
-ul li.editMode input[type="text"] {
+.todo-list__item.edit-mode .todo-item__input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
-ul li.editMode label {
-  display: none; 
+.todo-list__item.edit-mode .todo-item__label {
+  display: none;
+}
+
+@media (max-width: 768px) {
+
+  .todo-heading {
+    text-align: center;
+  }
+  
 }
