refactor: add visually-hidden class & h3 heading for article

--- a/style.css
+++ b/style.css
@@ -160,6 +160,14 @@ button {
   display: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 @media (max-width: 768px) {
 
   .todo-heading {
